manifests/0000_09_machine-approver-00-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/node-selector: ""
  name: openshift-cluster-machine-approver
  labels:
    openshift.io/run-level: "0"
