manifests/0000_51_machine-approver-07-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: openshift-cluster-machine-approver
  name: machine-approver
  labels:
    app: openshift-machine-approver
    machine-approver: "true"
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: openshift-machine-approver
  template:
    metadata:
      name: machine-approver
      labels:
        app: openshift-machine-approver
    spec:
      hostNetwork: true
      serviceAccountName: machine-approver-sa
      containers:
      - name: machine-approver-controller
        image: docker.io/openshift/origin-cluster-machine-approver:v4.0
        imagePullPolicy: Always
        command: ["machine-approver", "operator"]
        args:
        - "--config=/var/run/configmaps/config/operator-config.yaml"
        - "-v=4"
        volumeMounts:
        - mountPath: /var/run/configmaps/config
          name: config
      volumes:
      - name: config
        configMap:
          defaultMode: 440
          name: origin-cluster-machine-approver-config
      nodeSelector:
        node-role.kubernetes.io/master: ""
      tolerations:
      - operator: Exists
