manifests/04-deployment-capi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: openshift-cluster-machine-approver
  name: machine-approver-capi
  labels:
    app: machine-approver-capi
    machine-approver-capi: "true"
  annotations:
    exclude.release.openshift.io/internal-openshift-hosted: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
    release.openshift.io/feature-gate: "ClusterAPIMachineManagement"
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: machine-approver-capi
  template:
    metadata:
      name: machine-approver-capi
      annotations:
        target.workload.openshift.io/management: '{"effect": "PreferredDuringScheduling"}'
        kubectl.kubernetes.io/default-container: machine-approver-controller
        openshift.io/required-scc: restricted-v2
      labels:
        app: machine-approver-capi
    spec:
      serviceAccountName: machine-approver-sa
      containers:
      - name: machine-approver-controller
        image: docker.io/openshift/origin-cluster-machine-approver:v4.0
        imagePullPolicy: IfNotPresent
        securityContext:
          readOnlyRootFilesystem: true
        command: ["/usr/bin/machine-approver"]
        args:
        - "--config=/var/run/configmaps/config/config.yaml"
        - "-v=2"
        - "--logtostderr"
        - "--leader-elect=true"
        - "--leader-elect-lease-duration=137s"
        - "--leader-elect-renew-deadline=107s"
        - "--leader-elect-retry-period=26s"
        - "--leader-elect-resource-namespace=openshift-cluster-machine-approver"
        - "--leader-elect-resource-name=capi-cluster-machine-approver-leader"
        - "--api-group-version=cluster.x-k8s.io/v1beta1"
        - "--disable-status-controller=true"
        - "--max-concurrent-reconciles=10"
        - "--metrics-bind-address=0.0.0.0:9194"
        ports:
        - containerPort: 9194
          name: https
          protocol: TCP
        resources:
          requests:
            memory: 50Mi
            cpu: 10m
        volumeMounts:
        - mountPath: /var/run/configmaps/config
          name: config
        - mountPath: /tmp/k8s-metrics-server/serving-certs
          name: machine-approver-tls
        terminationMessagePolicy: FallbackToLogsOnError
      volumes:
      - name: machine-approver-tls
        secret:
          secretName: machine-approver-capi-tls
      - name: config
        configMap:
          defaultMode: 440
          name: machine-approver-config
          optional: true
      nodeSelector:
        node-role.kubernetes.io/master: ""
      priorityClassName: "system-cluster-critical"
      tolerations:
      - key: node-role.kubernetes.io/master  # Just tolerate NoSchedule taint on master node. If there are other conditions like disk-pressure etc, let's not schedule the control-plane pods onto that node.
        operator: Exists
        effect: "NoSchedule"
      - key: "node.kubernetes.io/unreachable"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 120 # Evict pods within 2 mins.
      - key: "node.kubernetes.io/not-ready"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 120 # Evict pods within 2 mins.
